deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minis-api
  name: minis-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minis-api
  template:
    metadata:
      labels:
        app: minis-api
    spec:
      containers:
        - image: gcr.io/pgtm-jlong/minis-api
          imagePullPolicy: Always
          name: minis-api

          startupProbe:
            failureThreshold: 60
            periodSeconds: 60
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          readinessProbe:
            failureThreshold: 60
            periodSeconds: 60
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          livenessProbe:
            failureThreshold: 60
            periodSeconds: 60
            httpGet:
              port: 8080
              path: /actuator/health/liveness

          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "2Gi"
