deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: spring-tips-bites
  name: spring-tips-bites
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: spring-tips-bites
  type: LoadBalancer
